--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -16,6 +16,12 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - uses: actions-rs/toolchain@v1
+      with:
+        toolchain: nightly
+        target: thumbv7em-none-eabi
+        components: rust-src
+        override: true
     - name: Build
       run: cargo build --verbose
     - name: Run tests
