--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,8 @@ version = "0.0.0-beta0"
 edition = "2018"
 keywords = ["no-std", "embedded-hal-driver", "embedded-hal"]
 categories = ["embedded", "hardware-support", "no-std"]
-description = "A crate to use HD44780 compliant displays with embedded-hal"
-authors = ["John Doneth <doneth7@gmail.com>"]
+description = "Trinamic Motion Control Language (TMCL) in Rust"
+authors = ["xoviat <xoviat@gmail.com>"]
 license = "MIT"
 repository = "https://github.com/xoviat/trinamic"
 readme = "README.md"
